Pattern Matching done

--- a/notebook/CeQuilFautDeScalaPourSpark.ipynb
+++ b/notebook/CeQuilFautDeScalaPourSpark.ipynb
@@ -2059,7 +2059,7 @@
     "}.\n",
     "```\n",
     "\n",
-    "Comparez la à la version précédente (en ignorant les améliorations pour les mots vides et les majuscules, marqués avec les commentaires \\#1 et \\#2) :\n",
+    "Comparez la avec la version précédente (en ignorant les améliorations pour les mots vides et les majuscules, marqués avec les commentaires \\#1 et \\#2) :\n",
     "\n",
     "```scala\n",
     "flatMap { location_contents_tuple2 => \n",
@@ -2069,33 +2069,31 @@
     "}.\n",
     "```\n",
     "\n",
-    "À la place de `location_contents_tuple2` un nom de variable pour tout le tuple, J'ai écrit `case (location, contents)`. Le mot-clé `case` indique que j'effectue un _pattern match_ sur l'objet passé à la fonction. Si \n",
+    "À la place de `location_contents_tuple2` un nom de variable pour tout le tuple, J'ai écrit `case (location, contents)`. Le mot-clé `case` indique que j'effectue un _pattern match_ sur l'objet passé à la fonction. Si c'est un tuple de deux éléments (et je sais que nous serons toujours dans ce cas), alors on _extrait_ le premier élément et l'assigner à une variable nommée `location` puis on extrait le second élément et on l'assigne à un variable nommée `contents`.\n",
     "\n",
-    "Instead of `location_contents_tuple2` a variable name for the whole tuple, I wrote `case (location, contents)`. The `case` keyword says I want to _pattern match_ on the object passed to the function. If it's a two-element tuple (and I know it always will be in this case), then _extract_ the first element and assign it to a variable named `location` and extract the second element and assign it to a variable named `contents`.\n",
+    "Maintenant, au lieu d'accèder à la position (`location`) et au contenu (`content`) avec la syntaxe quelque peu obscure et verbeuse `location_contents_tuple2._1` et `location_contents_tuple2._2`, respectivement, j'utilise des noms éloquents, `location` et `content`. Le code devient plus concis et plus lisible.\n",
     "\n",
-    "Now, instead of accessing the location and content with the slighly obscure and verbose `location_contents_tuple2._1` and `location_contents_tuple2._2`, respectively, I use meaningful names, `location` and `contents`. The code becomes more concise and more readable. \n",
-    "\n",
-    "I'll explore more pattern matching features below."
+    "Je vais ci-dessous explorer d'avantage le pattern matching."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `reduceByKey` step is unchanged:\n",
+    "L'étape `reduceByKey` reste inchangé :\n",
     "\n",
     "```scala\n",
     "reduceByKey((count1, count2) => count1 + count2).\n",
     "```\n",
     "\n",
-    "To be clear, this isn't a pattern-matching expression; there is no `case` keyword. It's just a \"regular\" function that takes two arguments, for the two things I'm adding."
+    "Pour plus de clarté, ceci n'est pas une expression de pattern-matching ; il n'y a de mot-clé `case`. C'est juste une fonction \"régulière\" qui prend deux paramètres, pour les deux éléments que je veux additionner."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "My favorite improvement is the next line:\n",
+    "Mon amélioration préféré est dans la ligne suivante :\n",
     "\n",
     "```scala\n",
     "map { \n",
@@ -2103,26 +2101,26 @@
     "}.\n",
     "```\n",
     "\n",
-    "Compare it to the previous, obscure version:\n",
+    "Comparez la avec l'obscure version précédente :\n",
     "\n",
-    "```\n",
+    "```scala\n",
     "map { word_file_count_tup3 => \n",
     "    (word_file_count_tup3._1._1, (word_file_count_tup3._1._2, word_file_count_tup3._2)) \n",
     "}.\n",
     "```\n",
     "\n",
-    "The new implementation makes it clear what I'm doing; just shifting parentheses! That's all it takes to go from the `(word, fileName)` keys with `count` values to `word` keys and `(fileName, count)` values. Note that pattern matching works just fine with nested structures, like `((word, fileName), count)`.\n",
+    "La nouvelle implémentation apporte de la clarté sur ce que je suis en train de faire : juste déplacer des parenthèses ! C'est tout ce que ça prend pour aller des clés `(word, fileName)` avec `count` en tant que valeur à des clés `word` et `(fileName, count)` en tant que valeur. Notez que le pattern matchimg fonctionne très bien avec les structures imbriquées, comme `((word, fileName), count)`.\n",
     "\n",
-    "I hope you can appreciate how elegant and concise this expression is! Note how I thought of the next transformation I needed to do in preparation for the final group-by, to switch from `((word, fileName), count)` to `(word, (fileName, count))` and _I just wrote it down exactly as I pictured it!_\n",
+    "J'espère que vous pouvez apprécier à quel point cette expression est élégante et concise ! NOtez comment je pense à la transformation suivante que j'ai besoin de faire en préparation pour le group-by final, de basculer de `((word, fileName), count)` à `(word, (fileName, count))` et _je l'ai simplement écrit exactement tel que je me l'étais représenté !_\n",
     "\n",
-    "Code like this makes writing Scala Spark code a sublime experience for me. I hope it will for you, too ;)"
+    "Du code comme celui-ci fait de l'écriture de code Scala Spark une expérience sublime pour moi. J'espère que c'est le cas pour vous aussi ;)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next two expressions are unchanged:\n",
+    "Les deux prochaines expressions sont inchangées :\n",
     "\n",
     "```scala\n",
     "groupByKey.\n",
@@ -2134,7 +2132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final `mapValues` now uses pattern matching to sort the `Vector` in each record:\n",
+    "Le `mapValues` final utilise maintenant le pattern matching pour trier le `Vector` dans chaque enregistrement :\n",
     "\n",
     "```scala\n",
     "mapValues { iterable => \n",
@@ -2145,7 +2143,7 @@
     "}\n",
     "```\n",
     "\n",
-    "Compared to the original version, it's again easier to read:\n",
+    "Comparé le à la version originale, c'est à nouveau plus facile à lire :\n",
     "\n",
     "```scala\n",
     "mapValues { iterable => \n",
@@ -2161,7 +2159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function I pass to `sortBy` returns a tuple used for sorting, with `-count` to force _descending_ numerical sort (biggest first) and `fileName` to secondarily sort by the file name, for equivalent counts. I could ignore file name order and just return `-count` (not a tuple). However, if you need more repeatable output in a distributed system like Spark, say for example to use in unit test validation, then the secondary sorting by file name is handy."
+    "La fonction que j'ai passé à `sortBy` retourne un tuple utilisé pour trié, avec `-count` pour forcé le trie numérique _descendant_ (le plus grand en premier) et `fileName` pour trié dans un deuxième temps par nom de fichier, pour les décomptes identiques. Je pourrais ignorer le trie par nom de fichier et simplement retourner `-count` (sans tuple). Cependant, si vous avez besoin d'une sortie reproductible dans un système réparti comme Spark, par exemple pour la validation par tests unitaires, alors le trie secondaire par nom de fichier utile."
    ]
   },
   {
