one sentence in the beginning

--- a/notebook/CeQuilFautDeScalaPourSpark.ipynb
+++ b/notebook/CeQuilFautDeScalaPourSpark.ipynb
@@ -179,13 +179,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<ul>\n",
-       "<li><a href=\"Some(http://638dd926b4fa:4040)\" target=\"new_tab\">Spark UI: local-1529932883293</a></li>\n",
-       "</ul>"
-      ],
       "text/plain": [
-       "Spark local-1529932883293: Some(http://638dd926b4fa:4040)"
+       "org.apache.spark.SparkContext = org.apache.spark.SparkContext@190942b2\n"
       ]
      },
      "execution_count": 4,
@@ -213,7 +208,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Spark version:      2.3.0\n",
+      "Spark version:      2.4.0\n",
       "Spark master:       local[*]\n",
       "Running 'locally'?: true\n"
      ]
@@ -259,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +383,7 @@
     {
      "data": {
       "text/plain": [
-       "errorString = \n"
+       "errorString: String = \n"
       ]
      },
      "metadata": {},
@@ -406,6 +401,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "errorString: String = \n"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -414,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -429,6 +434,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "String = \n"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -474,19 +489,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Utilisez des accolades pour les expressions : 2.4.0.\n",
-       "Elles sont optionnelles quand vous utilisez juste une variable : org.apache.spark.SparkContext@43eda0bb\n",
-       "Faites attention dans les cas comme : org.apache.spark.SparkContext@43eda0bbetunautretruc\n"
+       "Elles sont optionnelles quand vous utilisez juste une variable : org.apache.spark.SparkContext@190942b2\n",
+       "Faites attention dans les cas comme : org.apache.spark.SparkContext@190942b2etunautretruc\n"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "String = \n"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -504,13 +529,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "\"\n",
+       "line 1\n",
+       "  line 2\n",
+       "  line 3\n",
        "\"\n"
       ]
      },
@@ -520,13 +548,10 @@
     {
      "data": {
       "text/plain": [
-       "\n",
-       "line 1\n",
-       "  line 2\n",
-       "  line 3\n"
+       "String = \n"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,21 +568,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Character \"literals\" are specified single quotes, '/', while strings use double quotes, \"/\"."
+    "Les caractères 'littéraux' sont indiqués avec des apostrophes, '/', tandis que les string sont indiquées avec des guillemets, \"/\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "/"
+       "Char = /\n"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,16 +593,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "/"
+       "String = /\n"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
