More on Pattern Matching syntax

--- a/notebook/CeQuilFautDeScalaPourSpark.ipynb
+++ b/notebook/CeQuilFautDeScalaPourSpark.ipynb
@@ -2745,10 +2745,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## More on Pattern Matching Syntax\n",
-    "We've only scratched the surface of pattern matching. Let's explore it some more.\n",
+    "## Plus sur la syntaxe de Pattern Matching\n",
+    "Nous avons seulement gratté la surface du pattern matching. Découvrons la plus en détail.\n",
     "\n",
-    "Here's another anonymous function using pattern matching that extends the previous function we passed to `flatMap`:\n",
+    "Ici nous avons une autre fonction anonyme qui utilise du pattern matching qui étend la fonction précédente que nous avons passé à `flatMap` :\n",
     "\n",
     "```scala\n",
     "{\n",
@@ -2761,15 +2761,15 @@
     "}.\n",
     "```\n",
     "\n",
-    "You can have multiple `case` clauses, some of which might match on specific literal values (\"\" in this case) and others which are more general. The first case clause handles files with no content. The second clause is the same as before.\n",
+    "Vous pouvez avoir plusieurs clauses `case`, certains d'eux pouvant correspondre sur des valeurs littérales spécifiques (\"\" dans ce cas-là) et d'autres qui sont plus générales. La première clause case s'occupe des fichiers sans contenu. La seconde clause est la même qu'avant.\n",
     "\n",
-    "Pattern matching is _eager_. The first successful match in the order as written will win. If you reversed the order here, the `case (location, \"\")` would never match and the compiler would throw an \"unreachable code\" warning for it.\n",
+    "Le pattern matching est _eager_. L'ordre est important car le premier match réalisé sera celui écrit en premier. Si vous inversez l'ordre ici, alors la `case (location, \"\")` ne marchera jamais et le compilateur vous affichera un avertissement \"unreachable code\".\n",
     "\n",
-    "Note that you don't have to put the lines after the `=>` inside braces, `{...}` (although you can). The `=>` and `case` keywords (or the final `}`) are sufficient to mark these blocks. Also, for a single-expression block, like the one for the first case clause, you can put the expression on the same line after the `=>` if you want (and it fits). \n",
+    "Notez que vous n'avez pas à mettre les lignes après le `=>` dans les accolades `{...}` (bien que vous pouvez le faire). Les mots-clés `=>` et `case` (ou le dernier `}`) sont suffisants pour délimiter ces blocs. Aussi pour un bloc contenant une seule expression, comme pour la première clause, vous pouvez mettre l'expression sur la même ligne après le `=>` si vous voulez (et si ça rentre).\n",
     "\n",
-    "Finally, if none of the case clauses matches, then a [MatchError](http://www.scala-lang.org/api/current/index.html#scala.MatchError) exception is thrown. In our case, we _always_ know we'll have two-element tuples, so the examples so far are fine. \n",
+    "FInalement si aucun des case n'est réalisé, alors une exception [MatchError](http://www.scala-lang.org/api/current/index.html#scala.MatchError) exception est lancée. Dans notre cas, nous savons _toujours_ que nous avons des tuples à deux éléments, ainsi les exemples jusqu'ici sont corrects.\n",
     "\n",
-    "Here's a final contrived example to illustrate what's possible, using a sequence of objects of different types:"
+    "Voici un exemple final imaginé pour illustrer ce qui est possible, en utilisant une séquence d'objets de types différent :"
    ]
   },
   {
@@ -2831,15 +2831,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A few notes.\n",
-    "* A literal like `1` is inferred to be `Int`, while `3.14159` is inferred to be `Double`. Add `L` or `F`, respectively, to infer `Long` or `Float` instead.\n",
-    "* Note how we mixed specific type checking, e.g., `i: Int`, with more loosely-typed expressions, e.g., `(x1, x2)`, which expects a two-element tuple, but the element types are unconstrained.\n",
-    "* All the words `i`, `l`, `f`, `d`, `x1`, `x2`, `x3`, and `default` are arbitrary variable names. Yes `default` is not a keyword, but an arbitrary choice for a variable name. We could use anything we want.\n",
-    "* The last `default` clause specifies a variable with no type information. Hence, it matches _anything_, which is why this clause must appear last. This is the idiom to use when you aren't sure about the types of things you're matching against and you want to avoid a possible [MatchError](http://www.scala-lang.org/api/current/index.html#scala.MatchError).\n",
-    "* If you want to match that something _exists_, but you don't need to bind it to a variable, then use `_`, as in the three-element tuple example.\n",
-    "* The three-element tuple example also demonstrates that arbitrary nesting of expressions is supported, where the first element is expected to be a two-element tuple.\n",
+    "Quelques notes.\n",
+    "* Un littéral comme `1`est inféré en tant que `Int`, tandis que `3.14159` est inféré en tant que `Double`. Ajoutez `L` ou `F`, pour inférer respectivement `Long` ou `Float` à la place.\n",
+    "* Notez comment nous avons mélangé la vérifaction de types spécifiques, par exemple `i: Int` avec des types moins typés comme `(x1, x2)`, qui attend un tuple à deux éléments. Tous les mots `i`, `l`, `f`, `d`, `x1`, `x2`, `x3`, et `default` sont des noms de variables arbitraires. `default` n'est pas un mot-clé, mais un choix arbitraire pour le nom d'une variable. Nous pourrions utiliser ce que nous voulons.\n",
+    "* La dernière clause `default` définit une variable sans information de type. Ainsi, cela match _tout_, ce qui est la raison pour laquelle cette clause doit apparaître en dernier. C'est la syntaxe utilisée quand vous n'êtes pas sûr du type des choses que vous être en train de faire correspondre et que vous voulez éviter une possible [MatchError](http://www.scala-lang.org/api/current/index.html#scala.MatchError).\n",
+    "* Si vous voulez matcher quelque chose qui _existe_, mais dont vous n'avez pas besoin de mettre dans une variable, alors utilisez `_` comme dans l'exemple du tuple à trois éléments.\n",
+    "* L'exemple du tuple à trois éléments montre que \"l'imbriquage\" arbitraire d'expressions est supportée, où le premier élément attendu est un tuple de deux éléments.\n",
     "\n",
-    "All the anonymous functions we've seen that use these pattern matching clauses have this format:\n",
+    "Toutes les fonctions anonymes que nous avons vues qui utilisent ces clauses de pattern matching ont ce format :\n",
     "\n",
     "```scala\n",
     "{ \n",
@@ -2848,23 +2847,23 @@
     "    ... \n",
     "}```\n",
     "\n",
-    "This format has a special name. It's called a _partial function_. All that means is that we only \"promise\" to accept arguments that match at least one of our `case` clauses, not any possible input. \n",
+    "Ce format a un nom spécial. Il est appelé _fonction partielle_. Tout ce que cela veut dire est seulement que nous \"promettons\" d'accepter des arguments qui correspondent à au moins une de nos clauses `case` et non pas n'importe quelle entrée.\n",
     "\n",
-    "The other kind of anonymous function we've seen is a _total function_, to be precise. \n",
+    "L'autre type de fonction anonyme que nous avons vu est la _fonction totale_.\n",
     "\n",
-    "Recall we said that for total functions you can use either `(...)` or `{...}` around them, depending on the \"look\" you want. For _partial functions_, you _must_ use `{...}`."
+    "Souvenez-vous lorsque il a été dit que les fonctions totales peuvent utiliser soit `(...)` ou `{...}` autour d'elles, en fonction du \"look\" que vous voulez leur donner. Pour les _fonction partielles_, vous _devez_ utiliser `{...}`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Also, recall that we used pattern matching with assignment:\n",
+    "Souvenez-vous que nous avons utilisé du pattern matching avec affectation :\n",
     "\n",
     "```scala\n",
     "val (locations, counts) = vect.unzip  \n",
     "```\n",
-    "[Vector.unzip](http://www.scala-lang.org/api/current/#scala.collection.immutable.Vector) returns a two-element tuple, where each element is a collection. We matched on that tuple and assigned each piece to a variable. Here's another contrived example, with nested tuple elements:"
+    "[Vector.unzip](http://www.scala-lang.org/api/current/#scala.collection.immutable.Vector) retourne un tuple de deux éléments, où chaque élément est une collection. Nous matchons sur ce tuple et affectons chaque pièce à une variable. Voici un autre exemple imaginé avec un tuple comportant des éléments imbriqués."
    ]
   },
   {
@@ -2912,14 +2911,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try adding an `\"E\"` element to the tuple on the right-hand side, without changing the left-hand side. What happens? Try removing the `\"D\"` and `\"E\"` elements. What happens now?"
+    "Essayez d'ajouter un élément `\"E\"` au côté droit du tuple sans changer le côté gauche. Que se passe-t-il ?\n",
+    "Essayez d'enlever le `\"D\"` et le `\"E\"`. Que se passe-t-il maintenant ?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll come back to one last example of pattern matching when we discuss _case classes_."
+    "Nous reviendrons à un dernier exemple de pattern matching quand nous discuterons des _case classes_."
    ]
   },
   {
