--- a/notebook/CeQuilFautDeScalaPourSpark.ipynb
+++ b/notebook/CeQuilFautDeScalaPourSpark.ipynb
@@ -3053,9 +3053,9 @@
    "metadata": {},
    "source": [
     "### Case Classes\n",
-    "Tuples are handy for representing records and for decomposing them with pattern matching. However, it would be nice if the fields were _named_, as well as _typed_. A good use for a class, like our `IIRecord1` above, us to represent this structure and give us named fields. Let's now refine that class definition to exploit some extra, very useful features in Scala.\n",
+    "Les tuples sont utiles pour représenter des lignes et les décomposer avec du pattern matching. Cependant, il serait agréable si les champs étaient _nommés_ ainsi que _typés_. Une bonne utilisation pour une classe comme `IIRecord1` pour représenter cette structure et nous donner des champs nommés. Affinons donc la définition de la classe afin d'exploiter des fonctionnalités supplémentaires très utile en Scala.\n",
     "\n",
-    "Consider the following definition of a _case class_ that represents our final record type."
+    "Considérons la définition suivante d'une _case class_ qui représente notre type d'enregistrement final."
    ]
   },
   {
@@ -3120,7 +3120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I said that defining secondary constructors is not very common. In part, it's because I used a convenient feature, the ability to define default values for arguments to methods, including the primary constructor. The default values mean that I can create instances without providing all the arguments explicitly, as long as there is a default value defined, and similarly for calling methods. Consider these two examples:"
+    "Nous avons dit que définir des constructeurs secondaires n'était pas très commun. En partie c'est parce que nous avons utilisé une fonctionnalité pratique, la capacité de définir des valeurs par défaut pour les arguments de méthodes, en incluant le constructeur primaire. La possibilité d'utiliser des valeurs par défaut signifie que nous pouvons créer des instances sans avoir à donner tous les arguments explicitement tant qu'il y a une valeur par défaut définie et de même pour l'appel des méthodes. Considérez ces deux exemples suivant :"
    ]
   },
   {
@@ -3200,31 +3200,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I added `toJSONString` to illustrate adding _public_ methods, the default visibility, and _private_ methods to a class definition. By the way, when there are no methods or non-field variables to define, I can omit the body complete; no empty `{}` required.\n",
+    "Nous avons ajouté `toJSONString` pour illustrer l'ajout de méthodes _publiques_, la visibilité par défaut et les méthodes _privées_ à la définition d'une classe. Quand il n'y a pas de méthodes ou de variables sans champs à définir, nous pouvons omettre le corps entièrement, pas de `{}` nécessaire.\n",
     "\n",
-    "Recall that the `override` keyword is required when redefining `toString`."
+    "Souvenez-vous du mot-clé `override` qui est utilisé lorsque nous redéfinissons `toString`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Okay, what about that `case` keyword? It tells the compiler to do several useful things for us, eliminating a lot of boilerplate that we would have to write for ourselves with other languages, especially Java:\n",
+    "Qu'en est-il du mot-clé `case`? Ce mot-clé dit au compilateur de faire plusieurs choses utiles pour nous, éliminant ainsi pas mal de code superflu que nous pourrions trouver dans d'autres langages, comme Java :\n",
     "\n",
-    "1. Treat each constructor argument as an immutable (`val`) private field of the instance.\n",
-    "1. Generate a public reader method for the field with the same name (e.g., `word`).\n",
-    "1. Generate _correct_ implementations of the `equals` and `hashCode` methods, which people often implement incorrectly, as well as a default `toString` method. You can use your own definitions by adding them explicitly to the body. We did this for `toString`, to format the arrays in a nicer way than the default `Array[_].toString` method.\n",
-    "1. Generate an `object IIRecord`, i.e., with the same name. The object is called the _companion object_.\n",
-    "1. Generate a \"factory\" method in the companion object that takes the same argument list and instantiates an instance.\n",
-    "1. Generate helper methods in the companion object that support pattern matching.\n",
+    "1. Traitez chaque argument de constructeur comme un champ privé immutable (`val`) de l'instance.\n",
+    "1. Générez une méthode de lecteur publique pour le champ avec le même nom (par exemple `word`).\n",
+    "1. Générez des implémentations _correctes_ des méthodes `equals` et `hashCode`, souvent implémentées incorrectement, ainsi que la méthode par défaut `toString`. Vous pouvez utiliser vos propres définitions en les ajoutant explicitement dans le corps. Nous avons fait cela pour `toString` afin de formatter les tableaux de manière plus agréable que la méthode par défaut `Array[_].toString`.\n",
+    "1. Générez un `object IIRecord`, donc avec le même nom. L'objet sera appelé _objet compagnon_.\n",
+    "1. Générez une méthode \"factory\" dans l'objet compagnon qui prend la même liste d'argument et qui instancie une instance.\n",
+    "1. Générez des méthodes helper dans l'objet compagnon qui supportent le pattern matching.\n",
     "\n",
-    "Points 1 and 2 make each argument behave as if they are public, read-only fields of the instance, but they are actually implemented as described.\n",
+    "Les points 1 et 2 font que chaque argument se comporte comme s'ils étaient public, en lecture seule des champs de l'instance mais ils sont implémentés comme décrit.\n",
     "\n",
-    "Point 3 is important for correct behavior. Case class instances are often used as keys in [Maps](http://www.scala-lang.org/api/current/index.html#scala.collection.Map) and [Sets](http://www.scala-lang.org/api/current/index.html#scala.collection.Set), Spark RDD and DataFrame methods, etc. In fact, you should _only_ use your case classes or Scala's built-in types with well-defined `hashCode` and `equals` methods (like `Int` and other number types, `String`, tuples, etc.) as keys.\n",
+    "Le troisième point est important pour comprendre le comportement standard. Les instances de case class sont souvent utilisés comme clés dans [Maps](http://www.scala-lang.org/api/current/index.html#scala.collection.Map) et [Sets](http://www.scala-lang.org/api/current/index.html#scala.collection.Set), les RDD Spark RDD et méthodes de DataFrame, etc. En fait vous devriez utiliser _uniquement_ vos case classes ou les types inclus dans Scala possédant des bonnes définitions des méthodes `hashCode` et `equals` (comme `Int` et les autres types numériques, `String`, tuples, etc.) comme clés.\n",
     "\n",
-    "For point 4, the _companion object_ is generated automatically by the compiler. It adds the \"factory\" method discussed in point 5, and methods that support pattern matching, point 6. You can explicitly define these methods and others yourself, as well as fields to hold state. The compiler will still insert these other methods. However, see <a href=\"#Ambiguities\">Ambiguities with Companion Objects</a>. The bottom line is that you shouldn't define case classes in notebooks like this with extra methods in the companion object, due to parsing ambiguities.\n",
+    "Pour le quatrième point, _l'objet compagnon_ est généré automatiquement par le compilateur. Le compilateur ajoute une méthode \"factory\" mentioné dans le cinquième point, et des méthodes qui supportent le pattern matching, expliqué dans le sixième point. Vous pouvez définir ces méthodes explicitement par vous même ainsi que les champs pour retenir un état. Le compilateur insèrera toujours ces méthodes. Cependant jetez un oeil à <a href=\"#Ambiguities\">Ambiguities with Companion Objects</a>. La conclusion est que vous ne devriez pas définir des case classes dans un notebook comme celui ci avec des méthodes en plus dans l'objet compagnon à cause de problèmes de parsing que cela peut engendrer.\n",
     "\n",
-    "Point 5 means you actually rarely use `new` when creating instances. That is, the following are effectively equivalent:"
+    "Le cinquième point signifie que `new` est rarement utilisé quand des instances sont crées. Cependant, ces deux lignes suivantes sont équivalentes :"
    ]
   },
   {
@@ -3262,7 +3262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What actually happens in the second case, without `new`? The \"factory\" method is actually called `apply`. In Scala, whenever you put an argument list after any _instance_, including these `objects`, as in the `hello2` case, Scala looks for an `apply` method to call. The arguments have to match the argument list for apply (number of arguments, types of arguments, accounting for default argument values, etc.). Hence, the `hello2` declaration is really this:"
+    "Qu'arrive t'il en réalité dans le second cas sans `new` ? La méthode \"factory\" est en fait appelée `apply`. En Scala quand vous mettez une liste d'argument après n'importe quelle _instance_, en incluant les `objets` comme dans le cas de `hello2`, une méthode `apply` va être recherchée par Scala pour être appelée. Les arguments devront correspondre à la liste des argument à apply (nombre d'arguments, types des arguments, prise en compte des valeurs par défaut des arguments, etc.). Ainsi en réalité la déclaration de `hello2` est :"
    ]
   },
   {
@@ -3298,7 +3298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can exploit this feature, too, in your other classes. We talked about word stemming above. Suppose you write a stemming library and declare an object for as the entry point. Here, I'll just do something simple; assume a trailing \"s\" means the word is a plural and remove it (a bad assumption...):"
+    "Vous pouvez exploiter cette fonctionnalité dans vos autres classes aussi. Nous avon parlé du mot \"stemming\" en haut. Supposons que vous écriviez une libraire de stemming et déclariez un objet comme point d'entrée. Ici nous allons faire quelque chose de simple; nous assumons qu'un \"s\" à la fin du mot signifie que le mot est au pluriel et nous allons l'enlever (c'est une mauvaise présomption...) :"
    ]
   },
   {
@@ -3337,14 +3337,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note how it looks like I'm calling a function or method named `stem`. Scala allows object and class names to start with a lower case letter."
+    "Notez que l'appel à `stem` ressemble à un appel de fonction ou de méthode. Scala permet aux objets et aux classes d'avoir un nom qui commence avec une lettre minuscule."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, point 6 means we can use our custom case classes in pattern matching expressions. I won't go into the methods actually implemented in the companion object and how they support pattern matching. I'll just use the \"magic\" in the following example that \"parses\" or previously-defined `hello` and `world` instances."
+    "Finalement, le 6ème point signifie que nous pouvons utiliser nos case classes spécifique dans des expressions de pattern matching. Nous n'allons pas regarder les méthodes implémentées dans l'objet compagnon et comment ils supportent le pattern matching. Nous allons seulement utiliser de la \"magie\" dans l'exemple suivant qui \"parcourt\" nos instances définies précedemment, `hello` et `world`."
    ]
   },
   {
@@ -3375,9 +3375,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first case clause ignores the locations and counts, because I know they will be empty arrays if the total count is 0! \n",
+    "La première clause case ignore les locations et les counts car nous savons que ce seront des arrays vides si le count total est 0 !\n",
     "\n",
-    "The second case clause uses the `zip` method to put the locations and counts back together. Recall we used `unzip` to create the separate collections."
+    "La seconde clause case utilise la méthode `zip` pour mettre les locations et les counts ensemble. Souvenez-vous que nous avons utilisé `unzip` pour créer des collections séparées."
    ]
   },
   {
